# A1-Validator

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  program.md  pyproject.toml  sitemap.xml
.github/: SECURITY.md
.github/workflows/: ci.yml  docs.yml  publish-dev.yml  publish-ghcr.yml  publish-prod.yml  publish-testpypi.yml
.orchestration/: validator-port-queue.md
CHANGELOG/: index.html
about/: index.html
architecture/ADR-0010-multiarch-blocked/: index.html
architecture/ADR-0011-pypi-oidc-deferred/: index.html
cfo-quickstart/: index.html
cli/: index.html
deploy/: index.html
docs/: about.md  cfo-quickstart.md  cli.md  deploy.md  http.md  index.md  setup.md  validators.md
docs/architecture/: ADR-0010-multiarch-blocked.md  ADR-0011-pypi-oidc-deferred.md
http/: index.html
scripts/: _vendor.py  check_pypi_oidc_readiness.sh  gen_validators_md.py  setup_pypi_token.sh  spawn-worker.sh
search/: search_index.json
setup/: index.html
src/a1_validator/: __init__.py  _port.py  cli.py  results.py  server.py
src/a1_validator/_vendored/: __init__.py  ar_cuit.py  au_abn.py  chart_of_accounts_am.py  chart_of_accounts_ru.py  chat_client.py  cl_rut.py  cnpj.py  cpf.py  einvoice_am.py  eu_vat.py  gstin.py  hhvh.py  il_id.py  in_pan.py  invoice.py  jp_mynumber.py  kr_brn.py  model_catalog.py  model_policy.py  mx_rfc.py  open_notebook.py  payroll_am.py  payroll_ru.py  phone_am.py  phone_ru.py  product_research.py  regions_am.py  regions_ru.py  ru_einvoice.py  ru_identifiers.py  sa_tin.py  settings_store.py  sg_uen.py  supplemental_sources.py  swiss_uid.py  tw_ubn.py  uk_company.py  us_ein.py  vat_return.py  (+2 more)
tests/: conftest.py  test_chart_of_accounts_am.py  test_chart_of_accounts_ru.py  test_chat_client.py  test_ci_config.py  test_cli.py  test_einvoice_am.py  test_eu_vat.py  test_hhvh.py  test_inn.py  test_invoice.py  test_model_catalog.py  test_model_policy.py  test_open_notebook.py  test_packaging.py  test_payroll_am.py  test_payroll_ru.py  test_phone_am.py  test_product_research.py  test_regions_ru.py  test_ru_einvoice.py  test_ru_identifiers.py  test_server.py  test_server_integration.py  test_settings_store.py  test_validators.py  test_vat_return.py  test_vat_return_form.py  test_vat_ru.py
validators/: index.html
