[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a1-validator"
version = "0.1.0"
description = "A1 Validator — 23 SBOSS sovereign business ID validators, Python port."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "A1 Suite", email = "ops@a1-suite.local" },
]
keywords = ["a1", "sboss", "validator", "armenian", "russian", "hhvh", "inn", "phone", "invoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0,<3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
# HTTP service stack — installed by `pip install a1-validator[server]`.
# Kept opt-in so the core validator library stays light for embedded use
# (e.g. SBOSS UI bundles, notebook workflows) where FastAPI/uvicorn would
# just be dead weight.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
]
all = [
    "a1-validator[server]",
]

[project.scripts]
# Top-level CLI entry point — see `a1_validator.cli`. Note: the cli task
# in this plan adds other subcommands (`list`, `batch`, …) to the same
# Typer `app` object; the merge in `packaging-and-deploy` combines them.
a1-validate = "a1_validator.cli:app"

[project.scripts]
a1-validate = "a1_validator.cli:app"

[project.urls]
Homepage = "https://github.com/Armosphera/A1-Validator"
Source = "https://github.com/Armosphera/A1-Validator"
Upstream = "https://github.com/Armosphera/autoresearch-sboss"

[tool.setuptools.packages.find]
where = ["src"]
include = ["a1_validator*"]

[tool.setuptools.package-data]
a1_validator = ["_vendored/*.py", "_vendored/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
